k8s/nodeapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: node-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: "lirgautaemnnzn/node-app:0.3"
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "1"
            memory: 256Mi
