k8s/nodeapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: node-app
